Relative & absolute URLs can now be matched in RbelMessageValidator